Fix code action and code lens